src/core/snapshots/vue_template_compiler__core__tokenizer__test__test-13.snap
---
source: src/core/tokenizer.rs
expression: t

---
- StartTag:
    name: a
    attributes:
      - name: attr
        value:
          content:
            raw: "1123"
            ops:
              bits: 18
          location:
            start:
              offset: 8
              line: 1
              column: 9
            end:
              offset: 13
              line: 1
              column: 14
        name_loc:
          start:
            offset: 3
            line: 1
            column: 4
          end:
            offset: 7
            line: 1
            column: 8
        location:
          start:
            offset: 3
            line: 1
            column: 4
          end:
            offset: 13
            line: 1
            column: 14
    self_closing: false

