src/core/snapshots/vue_template_compiler__core__tokenizer__test__test-17.snap
---
source: src/core/tokenizer.rs
expression: t

---
StartTag:
  name: a
  attributes: []
  self_closing: false

