src/core/snapshots/vue_template_compiler__core__tokenizer__test__test-18.snap
---
source: src/core/tokenizer.rs
expression: t

---
- Comment: " nested <!"
- Text:
    raw: " text -->"
    ops:
      bits: 2

