src/core/snapshots/vue_template_compiler__core__tokenizer__test__test-20.snap
---
source: src/core/tokenizer.rs
expression: t

---
StartTag:
  name: a
  attributes:
    - name: attr
      value: ~
      name_loc:
        start:
          offset: 3
          line: 1
          column: 4
        end:
          offset: 7
          line: 1
          column: 8
      location:
        start:
          offset: 3
          line: 1
          column: 4
        end:
          offset: 9
          line: 1
          column: 10
  self_closing: false

